bt-182: * Fix border-radius and remove aligns

--- a/frontend/src/bundles/common/components/logo/styles.module.scss
+++ b/frontend/src/bundles/common/components/logo/styles.module.scss
@@ -4,7 +4,6 @@
 }
 
 .logoIcon {
-    align-items: center;
     width: 67px;
     height: 67px;
     border-radius: 7px;
@@ -18,12 +17,12 @@
     img {
         width: 100%;
         height: 100%;
+        border-radius: inherit;
         object-fit: cover;
     }
 }
 
 .logoLabel {
-    align-items: center;
     width: 261px;
     height: 37px;
 
